--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_454545">#454545</color>
+    <color name="gray_4f4f4f">#4f4f4f</color>
     <color name="blue_4285f4">#4285f4</color>
+    <color name="blue_95b5e0">#95b5e0</color>
 </resources>
