--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="gray_454545">#454545</color>
     <color name="gray_4f4f4f">#4f4f4f</color>
     <color name="gray_585858">#585858</color>
+    <color name="gray_878789">#878789</color>
+    <color name="gray_f6f7fb">#f6f7fb</color>
     <color name="blue_4285f4">#4285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
 </resources>
