--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gray_f6f7fb">#f6f7fb</color>
     <color name="blue_4285f4">#4285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
+    <color name="white_f2ffffff">#f2ffffff</color>
 </resources>
