feat：文章分类信息卡片

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gray_585858">#585858</color>
     <color name="gray_878789">#878789</color>
     <color name="gray_f6f7fb">#f6f7fb</color>
+    <color name="gray_cccccc">#cccccc</color>
     <color name="blue_4285f4">#4285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
     <color name="white_f2ffffff">#f2ffffff</color>
