feat：文章分类页下拉菜单蒙层

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="gray_454545">#454545</color>
     <color name="gray_4f4f4f">#4f4f4f</color>
     <color name="gray_585858">#585858</color>
+    <color name="gray_77000000">#77000000</color>
     <color name="gray_878789">#878789</color>
     <color name="gray_f6f7fb">#f6f7fb</color>
     <color name="gray_cccccc">#cccccc</color>
