--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="gray_cccccc">#cccccc</color>
     <color name="gray_f2f3f5">#f2f3f5</color>
     <color name="blue_4285f4">#4285f4</color>
+    <color name="blue_aa4285f4">#aa4285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
     <color name="white_f2ffffff">#f2ffffff</color>
 </resources>
