--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="gray_f6f7fb">#f6f7fb</color>
     <color name="gray_cccccc">#cccccc</color>
     <color name="gray_f2f3f5">#f2f3f5</color>
+    <color name="gray_f8f8fa">#f8f8fa</color>
     <color name="blue_4285f4">#4285f4</color>
     <color name="blue_aa4285f4">#aa4285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
