feat：搜索结果列表

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="gray_77000000">#77000000</color>
     <color name="gray_878789">#878789</color>
     <color name="gray_f6f7fb">#f6f7fb</color>
+    <color name="gray_f7f6fb">#f7f6fb</color>
     <color name="gray_cccccc">#cccccc</color>
     <color name="gray_f2f3f5">#f2f3f5</color>
     <color name="gray_f8f8fa">#f8f8fa</color>
