feat：搜索页搜索历史面板

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,7 @@
     <color name="blue_4285f4">#4285f4</color>
     <color name="blue_aa4285f4">#aa4285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
+    <color name="blue_1364e5">#1364e5</color>
+    <color name="blue_0185fa">#0185fa</color>
     <color name="white_f2ffffff">#f2ffffff</color>
 </resources>
