feat：搜索结果关键字高亮

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="blue_1364e5">#1364e5</color>
     <color name="blue_0185fa">#0185fa</color>
     <color name="white_f2ffffff">#f2ffffff</color>
+    <color name="orange_ff8c00">#FF8C00</color>
 </resources>
