--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="gray_f8f8fa">#f8f8fa</color>
     <color name="blue_4285f4">#4285f4</color>
     <color name="blue_aa4285f4">#aa4285f4</color>
+    <color name="blue_444285f4">#444285f4</color>
     <color name="blue_95b5e0">#95b5e0</color>
     <color name="blue_1364e5">#1364e5</color>
     <color name="blue_0185fa">#0185fa</color>
