feat: 文章详情页groovy语言样式、升级highlight.js版本、表格css样式

--- a/app/src/main/assets/article.detail.css
+++ b/app/src/main/assets/article.detail.css
@@ -26,3 +26,15 @@ blockquote {
 a {
     border-bottom: 0.266vw solid #808080;
 }
+
+table tr:not(:last-child) {
+  border-bottom: 1px solid silver;
+}
+
+table tr:first-child td {
+  font-weight: bold;
+}
+
+td {
+  padding: 0.6em;
+}
