--- a/app/src/main/res/layout/audio_floating_window.xml
+++ b/app/src/main/res/layout/audio_floating_window.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
-    android:background="@color/blue_95b5e0">
+    android:layout_width="50dp"
+    android:layout_height="40dp"
+    android:background="@drawable/audio_floating_window_bg"
+    android:elevation="4dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/already_copy_to_clipboard"
-        android:textSize="12sp"
+    <ImageView
+        android:id="@+id/ic_music"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_music_playing"
+        android:tint="@color/blue_0185fa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
