feat: 文章详情页除webview和评论区外适配深色模式

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -31,6 +31,7 @@
     <color name="bg_f8f8fa">#282828</color>
     <color name="bg_f7f6fb">#282828</color>
     <color name="bg_cccccc">#282828</color>
+    <color name="bg_f2ffffff">#282828</color>
     <color name="text_article_title">#FFDADADA</color>
     <color name="text_article_summary">#FFA6A9B2</color>
     <color name="text_search_bar_hint">#FFA6A9B2</color>
