feat: 文章详情页css适配深色模式

--- a/app/src/main/assets/article.detail.css
+++ b/app/src/main/assets/article.detail.css
@@ -23,6 +23,16 @@ blockquote {
     font-size: 3.5vw;
 }
 
+@media (prefers-color-scheme: dark) {
+    blockquote {
+        border-left: 0.8vw solid #D3D3D3;
+        color: #A6A9B2;
+        padding-left: 1em;
+        margin: 1.4em 0;
+        font-size: 3.5vw;
+    }
+}
+
 a {
     border-bottom: 0.266vw solid #808080;
 }
