feat: 想法列表、想法详情页适配深色模式

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -32,6 +32,7 @@
     <color name="bg_f7f6fb">#282828</color>
     <color name="bg_cccccc">#282828</color>
     <color name="bg_f2ffffff">#282828</color>
+    <color name="bg_f6f7fb">#FF16171B</color>
     <color name="bg_white_dark_282828">#282828</color>
     <color name="text_article_title">#FFDADADA</color>
     <color name="text_article_summary">#FFA6A9B2</color>
