--- a/app/src/main/res/layout/audio_floating_window.xml
+++ b/app/src/main/res/layout/audio_floating_window.xml
@@ -23,7 +23,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:src="@drawable/ic_pause_floating"
-        android:tint="@color/gray_585858"
+        android:tint="@color/text_article_summary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ic_music"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/ic_close"
-        android:tint="@color/gray_878789"
+        android:tint="@color/text_article_summary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ic_ctrl"
